# kigo-pro-dashboard

./: .env.example  .env.production  .eslintignore  .gitignore  .impeccable.md  .prettierignore  .prettierrc  COMMENTING_GUIDE.md  DESIGN_VERSIONING_STRATEGY.md  GOOGLE_MAPS_SETUP.md  LANGGRAPH_INTEGRATION_CHANGES.md  MIGRATION.md  README.md  STABLE_COMPONENTS_ANALYSIS.md  STORYBOOK_EMBEDDING_RECOMMENDATIONS.md  commitlint.config.cjs  deploy-storybook.sh  deploy-vercel.sh  fix-vercel-deployment.sh  langgraph-studio-schema.json  langgraph-studio-schema.yaml  langgraph.json  langgraph_server.py  lint-staged.config.cjs  middleware.ts  netlify.toml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  remotion.config.ts  setup-langgraph-integration.sh  setup.py  stagewise.config.js  tailwind.config.mjs  test-copilotkit-integration.js  test-langgraph-integration.js  tsconfig.json  vercel.json
.husky/: pre-commit
.storybook/: main.cjs  main.js  mockNextHooks.js  mockNextNavigation.js  mockNextNavigation.tsx  mockReduxProvider.tsx  preview-head.html  preview.js
adr/: 000-adr-template.md  001-atomic-design-structure.md
app/: ClientLayout.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
backend/: .gitignore  README.md  copilotkit_endpoint.py  copilotkit_server.py  copilotkit_server_official.py  langgraph.json  main.py  pyproject.toml  requirements-copilotkit.txt  requirements.txt  test_server.py
backend/app/: __init__.py
backend/app/agents/: __init__.py  offer_manager.py  supervisor.py
(+1170 files in other folders)
